[metadata]
name = tts_helper
version = 0.1
description = Text to speech functions
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/saltchicken/tts_helper
author = John Eicher
author_email = john.eicher89@gmail.com

[options]
packages = find:
install_requires =
    gtts
    pydub
    elevenlabs
